examples/test/testpolicy17988.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17988
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key21: value14
      key37: value17
      key39: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value43
          key48: value27
          key24: value49
